Fixed overflowing headings. Resolves #25

--- a/src/sass/layout/_mobile.scss
+++ b/src/sass/layout/_mobile.scss
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
 
   .ui.menu .item>i.icon {
     margin: 0px 10px 0px 0px;
